// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup should render button group 1`] = `
.c0 {
  display: block;
  text-align: initial;
}

.c0 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 8px !important;
}

.c0 > *:last-child {
  margin-right: 0 !important;
}

<ButtonGroupComponent
  className="c0"
/>
`;

exports[`ButtonGroup should render button group component 1`] = `<div />`;

exports[`ButtonGroup should render centered button group 1`] = `
.c0 {
  display: block;
  text-align: center;
}

.c0 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 8px !important;
}

.c0 > *:last-child {
  margin-right: 0 !important;
}

<ButtonGroupComponent
  align="center"
  className="c0"
/>
`;

exports[`ButtonGroup should render full width button group 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: initial;
}

.c0 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 8px !important;
}

.c0 > *:last-child {
  margin-right: 0 !important;
}

<ButtonGroupComponent
  className="c0"
  fullWidth={true}
/>
`;
